# cf

./: .gitignore  dev_notes.doc
algo_main/: show_train_log.py  show_training_result_all.sh
algo_main/train_lenet_gpu_batch/: CMakeLists.txt  lenet_train.cpp  lenet_train.hpp
algo_main/train_lenet_gpu_xnor/: CMakeLists.txt  lenet_train_xnor.cpp  lenet_train_xnor.hpp
caffe/caffe_gpu_batch/: CMakeLists.txt  caffe_read_train_data.hpp  caffe_train_classification.hpp  caffe_train_detection.hpp  netsolve.hpp  random_fill.hpp
caffe/caffe_gpu_batch/layers/: BN_layer.cpp  BN_layer.hpp  CMakeLists.txt  Center_loss_layer.cpp  Center_loss_layer.hpp  Concat_layer.cpp  Concat_layer.hpp  Conv_layer.hpp  Convxor_layer.hpp  Dropout_layer.cpp  Dropout_layer.hpp  Eltwise_layer.cpp  Eltwise_layer.hpp  LRN_layer.cpp  LRN_layer.hpp  Pooling_layer.cpp  Pooling_layer.hpp  Prelu_layer.cpp  Prelu_layer.hpp  Relu_layer.cpp  Relu_layer.hpp  Softmax_layer.cpp  Softmax_layer.hpp  Softmax_loss_layer.cpp  Softmax_loss_layer.hpp  conv_layer.cpp  convxor_layer.cpp  cuda.cpp  cuda.hpp  gemm.cpp  gemm.hpp  gpu_kerfunc.cu  ip_layer.cpp  ip_layer.hpp  logistic_loss_layer_sf.cpp  logistic_loss_layer_sf.hpp  region2d_layer.cpp  region2d_layer.hpp  scale_layer.cpp  scale_layer.hpp
