cmake_minimum_required(VERSION 3.5)
project( lenet_xnor_train )
set( caffe_gpu_dir ${CMAKE_CURRENT_SOURCE_DIR}/../../caffe/caffe_gpu_batch)
add_subdirectory(${caffe_gpu_dir} ${caffe_gpu_dir})
include_directories(${caffe_gpu_dir})
file(GLOB _src "*.cpp")
file(GLOB _head "*.hpp")
find_package( OpenCV REQUIRED )
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pthread")
SET(CMAKE_CXX_FLAGS "-std=c++11 -O3")
add_executable(face_algo_main  ${_src} ${_head} )
#target_link_libraries(face_algo_main fdet_lib frec_lib objdet_lib self_train_lib ${OpenCV_LIBS})
target_link_libraries(face_algo_main ${OpenCV_LIBS} caffe_gpu_lib dl)

