cmake_minimum_required(VERSION 3.5)
project(caffe_gpu)
find_package(CUDA REQUIRED)
find_package( OpenCV REQUIRED )
include_directories(/usr/local/cuda/include/)
file(GLOB layers_src "*.cpp")
file(GLOB layers_head "*.hpp")
file(GLOB cuda_src "*.cu")
SET(CMAKE_CXX_FLAGS "-std=c++11 -O3")

add_library(caffe_layers_lib  ${layers_src} ${layers_head})
cuda_add_library(cuda_lib  ${cuda_src} ${layers_head})
target_link_libraries( caffe_layers_lib  ${OpenCV_LIBS}  cuda_lib -lcblas)
CUDA_ADD_CUBLAS_TO_TARGET(caffe_layers_lib)
